Add search service and handler using elasticsearch for event
