# docs/swagger.json
@@ -4,52 +4,6 @@
         "contact": {}
     },
     "paths": {
-        "/current-user-profile": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Get current user profile",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Get current user profile",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Profile"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request - Invalid user_id",
-                        "schema": {
-                            "$ref": "#/definitions/fiber.Map"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized - Invalid token",
-                        "schema": {
-                            "$ref": "#/definitions/fiber.Map"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error - Failed to get user profile",
-                        "schema": {
-                            "$ref": "#/definitions/fiber.Map"
-                        }
-                    }
-                }
-            }
-        },
         "/events": {
             "get": {
                 "description": "Get a list of all events",
@@ -154,7 +108,7 @@
         },
         "/events/q": {
             "get": {
-                "description": "Search for events based on various criteria such as search term, category, location type, audience, and price type.",
+                "description": "Search events by keyword",
                 "consumes": [
                     "application/json"
                 ],
@@ -162,38 +116,39 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Events"
+                    "Searching"
                 ],
-                "summary": "Search for events",
+                "summary": "Search events",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Search term",
+                        "description": "Keyword to search for events",
                         "name": "search",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "string",
-                        "description": "Event category",
+                        "description": "Category of events",
                         "name": "category",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Location type",
-                        "name": "location",
+                        "description": "Location Type of events",
+                        "name": "locationType",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Audience type",
+                        "description": "Main Audience of events",
                         "name": "audience",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Price type",
-                        "name": "price",
+                        "description": "Price Type of events",
+                        "name": "priceType",
                         "in": "query"
                     }
                 ],
@@ -203,24 +158,24 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/service.EventCardResponses"
+                                "$ref": "#/definitions/models.Event"
                             }
                         }
                     },
                     "400": {
-                        "description": "Bad Request - Invalid query parameters",
+                        "description": "error - Bad Request\"}",
                         "schema": {
                             "$ref": "#/definitions/fiber.Map"
                         }
                     },
                     "404": {
-                        "description": "Not Found - Events not found",
+                        "description": "error - events not found\"}",
                         "schema": {
                             "$ref": "#/definitions/fiber.Map"
                         }
                     },
                     "500": {
-                        "description": "Internal server error - Something went wrong",
+                        "description": "error - Internal Server Error\"}",
                         "schema": {
                             "$ref": "#/definitions/fiber.Map"
                         }
@@ -598,7 +553,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/orgs/{orgID}/events/{catID}": {
             "post": {
                 "description": "Create a new event for a specific organization",
                 "consumes": [
@@ -610,12 +567,19 @@
                 "tags": [
                     "Events"
                 ],
-                "summary": "Create a new event",
+                "summary": "Create a new event (Not Finished!!!! Cannot add locationType, audience, and priceType)",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "Organization ID",
                         "name": "orgID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Category ID",
+                        "name": "catID",
                         "in": "path",
                         "required": true
                     },
@@ -1311,6 +1275,19 @@
                 }
             }
         },
+        "models.Audience": {
+            "type": "string",
+            "enum": [
+                "general",
+                "students",
+                "professionals"
+            ],
+            "x-enum-varnames": [
+                "General",
+                "Students",
+                "Professionals"
+            ]
+        },
         "models.CareerStage": {
             "type": "string",
             "enum": [
@@ -1324,14 +1301,61 @@
                 "CareerStageJunior"
             ]
         },
-        "models.Experience": {
+        "models.Category": {
             "type": "object",
             "properties": {
                 "createdAt": {
                     "type": "string"
                 },
-                "currently": {
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isActive": {
                     "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "parentID": {
+                    "description": "ParentID is a Self-referencing foreign key If categories can be nested (e.g., \"Technology\" → \"AI\"), add a ParentID field for self-referencing categories.",
+                    "type": "integer"
+                },
+                "slug": {
+                    "description": "A Slug field helps create readable URLs (/category/artificial-intelligence instead of /category/123).",
+                    "type": "string"
+                },
+                "sortOrder": {
+                    "description": "For sorting categories in a preferred order: e.g., \"Technology\" should come before \"Business\"",
+                    "type": "integer"
+                },
+                "sub_categories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Category"
+                    }
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Event": {
+            "type": "object",
+            "properties": {
+                "audience": {
+                    "$ref": "#/definitions/models.Audience"
+                },
+                "category": {
+                    "$ref": "#/definitions/models.Category"
+                },
+                "categoryID": {
+                    "type": "integer"
+                },
+                "createdAt": {
+                    "type": "string"
                 },
                 "deletedAt": {
                     "$ref": "#/definitions/gorm.DeletedAt"
@@ -1342,22 +1366,70 @@
                 "endDate": {
                     "type": "string"
                 },
+                "endTime": {
+                    "type": "string"
+                },
+                "highlight": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "keyTakeaway": {
+                    "type": "string"
+                },
+                "latitude": {
+                    "type": "number"
+                },
+                "locationName": {
+                    "type": "string"
+                },
+                "locationType": {
+                    "$ref": "#/definitions/models.LocationType"
+                },
+                "longitude": {
+                    "type": "number"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "organization": {
+                    "$ref": "#/definitions/models.Organization"
+                },
+                "organizationID": {
+                    "type": "integer"
+                },
                 "picUrl": {
                     "type": "string"
                 },
-                "profileID": {
-                    "type": "integer"
+                "priceType": {
+                    "$ref": "#/definitions/models.PriceType"
+                },
+                "province": {
+                    "type": "string"
+                },
+                "requirement": {
+                    "type": "string"
                 },
                 "startDate": {
                     "type": "string"
                 },
-                "title": {
+                "startTime": {
                     "type": "string"
+                },
+                "ticketAvailable": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.TicketAvailable"
+                    }
+                },
+                "timeline": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Timeline"
+                    }
                 },
                 "updatedAt": {
-                    "type": "string"
-                },
-                "uuid": {
                     "type": "string"
                 }
             }
@@ -1387,6 +1459,17 @@
                     "type": "string"
                 }
             }
+        },
+        "models.LocationType": {
+            "type": "string",
+            "enum": [
+                "online",
+                "onsite"
+            ],
+            "x-enum-varnames": [
+                "Online",
+                "Onsite"
+            ]
         },
         "models.Media": {
             "type": "string",
@@ -1626,74 +1709,16 @@
                 }
             }
         },
-        "models.Profile": {
-            "type": "object",
-            "properties": {
-                "bio": {
-                    "type": "string"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "education": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "experiences": {
-                    "description": "One-to-Many relationship (has many)",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Experience"
-                    }
-                },
-                "firstName": {
-                    "type": "string"
-                },
-                "focusField": {
-                    "description": "field of expertise",
-                    "type": "string"
-                },
-                "headLine": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "language": {
-                    "type": "string"
-                },
-                "lastName": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string"
-                },
-                "picUrl": {
-                    "type": "string"
-                },
-                "skill": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "user": {
-                    "description": "One-to-One relationship (has one, use UserID as foreign key)",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    ]
-                },
-                "userID": {
-                    "type": "string"
-                }
-            }
+        "models.PriceType": {
+            "type": "string",
+            "enum": [
+                "free",
+                "paid"
+            ],
+            "x-enum-varnames": [
+                "Free",
+                "Paid"
+            ]
         },
         "models.Provider": {
             "type": "string",
@@ -1718,6 +1743,41 @@
                 "RoleUser",
                 "RoleAdmin"
             ]
+        },
+        "models.TicketAvailable": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "event": {
+                    "$ref": "#/definitions/models.Event"
+                },
+                "eventID": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
         },
         "models.Timeline": {
             "type": "object",
@@ -1855,6 +1915,18 @@
         "service.EventResponses": {
             "type": "object",
             "properties": {
+                "audience": {
+                    "type": "string",
+                    "example": "genteral"
+                },
+                "category": {
+                    "type": "string",
+                    "example": "all"
+                },
+                "category_id": {
+                    "type": "integer",
+                    "example": 2
+                },
                 "description": {
                     "type": "string",
                     "example": "This is a description"
@@ -1887,6 +1959,10 @@
                     "type": "string",
                     "example": "builds CMU"
                 },
+                "locationType": {
+                    "type": "string",
+                    "example": "onsite"
+                },
                 "longitude": {
                     "type": "number",
                     "example": 100.5018
@@ -1902,6 +1978,10 @@
                 "picUrl": {
                     "type": "string",
                     "example": "https://example.com/image.jpg"
+                },
+                "priceType": {
+                    "type": "string",
+                    "example": "free"
                 },
                 "province": {
                     "type": "string",
@@ -2093,13 +2173,17 @@
         "service.NewEventRequest": {
             "type": "object",
             "properties": {
+                "audience": {
+                    "type": "string",
+                    "example": "general"
+                },
                 "description": {
                     "type": "string",
                     "example": "This is a description"
                 },
                 "endDate": {
                     "type": "string",
-                    "example": "2024-11-29"
+                    "example": "2025-01-22"
                 },
                 "endTime": {
                     "type": "string",
@@ -2121,6 +2205,10 @@
                     "type": "string",
                     "example": "Bangkok"
                 },
+                "locationType": {
+                    "type": "string",
+                    "example": "onsite"
+                },
                 "longitude": {
                     "type": "number",
                     "example": 100.5018
@@ -2133,6 +2221,10 @@
                     "type": "string",
                     "example": "https://example.com/image.jpg"
                 },
+                "priceType": {
+                    "type": "string",
+                    "example": "free"
+                },
                 "province": {
                     "type": "string",
                     "example": "Chiang Mai"
@@ -2143,7 +2235,7 @@
                 },
                 "startDate": {
                     "type": "string",
-                    "example": "2024-11-29"
+                    "example": "2025-01-25"
                 },
                 "startTime": {
                     "type": "string",
